--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
-Flask==3.0.0
+Flask==2.3.3
 flask-cors==4.0.0
-pandas==2.1.0
+pandas==2.0.3
 openpyxl==3.1.2
-Pillow==10.0.0
+Pillow==10.0.1
 requests==2.31.0
-werkzeug==3.0.0
+werkzeug==2.3.7
 gunicorn==21.2.0
+numpy==1.24.3
