--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,10 @@ services:
   - type: web
     name: overseas-catalog-api
     env: python
+    region: oregon
+    plan: free
     buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.11.7
