--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     region: oregon
     plan: free
     buildCommand: pip install -r requirements.txt
-    startCommand: gunicorn app:app
+    startCommand: gunicorn app:app --timeout 300 --workers 1
     envVars:
       - key: PYTHON_VERSION
         value: 3.11.7
